--- a/index.html
+++ b/index.html
@@ -23,34 +23,41 @@
     <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/tcg-175-en.png" alt="">
     <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/scarlet-violet-175x50-en.jpg" alt="">
     <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/community-forums-175x50-en.png" alt=""
-</div> 
-<div class="head2">
-    <i class="ho"><img src="pikachu.png" alt="" height="30px" width="30px">
-<span> Home</span>
-</i>
-<i class="ga"> <img src="game.png" alt=""  height="30px" width="30px">
- <span> Pokédex</span>
-</i>
-
-
-<i class="bu"><img src="button.png" alt=""  height="30px" width="30px">
-<span> Video Games & <br> Apps </span>
-</i>
-<i class="i"><img src="https://freepngimg.com/download/pokemon/121683-pokemon-card-png-image-high-quality.png" alt="" height="70px" width="80px">
-<span> Trading Card <br> Game </span>
-</i>
- <i class="an" ><img src="play.png" alt=""  height="30px" width="30px">
-   <span> Animation</span>
-</i>
-<i class="pl"><img src="championship.png" alt=""  height="30px" width="30px">
-<span>Play! Pokémon <br> Events</span>
-</i>
-<i class="ne"> <img src="newspaper.png" alt=""  height="30px" width="30px">
-    <span>News</span>
-</i>
-
 </div>
+
+<div class="head2">
+    <div class="box"><img src="pikachu.png" alt="" height="30px" width="30px">
+ <p>Home</p>
+</div>
+<div class="ga"> <img src="game.png" alt=""  height="30px" width="30px">
+	 <p>Pokédex</p>
+</div>
+
+<div class="bu"><img src="button.png" alt=""  height="30px" width="30px">
+<p> Video Games & <br> Apps </p>
+</div>
+
+<div class="tr"><img src="cards.png" alt="" height="30px" width="30px">
+<p> Trading Card <br> Game </p>
+</div>
+
+
+ <div class="an" ><img src="play.png" alt=""  height="30px" width="30px">
+   <p> Animation</p>
+ </div>
+
+<div class="pl"><img src="championship.png" alt=""  height="30px" width="30px">
+<p>Play! Pokémon <br> Events</p>
+</div>
+
+<div class="ne"> <img src="newspaper.png" alt=""  height="30px" width="30px">
+    <p>News</p>
+</div>
+</div>
+
 </nav>
+
+
 <div class="mn">
 <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/trading-card-game/_tiles/sv/sv045/launch/sv045-launch-875-en.png" alt="">
 <h1>A Cavalcade of Shiny Pokémon Have Arrived in Scarlet & Violet—Paldean Fates
@@ -59,61 +66,53 @@
 </span>
 </h1>
 </div>
-
-    
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Pokémon Games</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
 	<div class="table_parent">
-		<div class="one">
+		<div class="one  animate__animated  animate__backInLeft"">
 			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-go/2024/01262024/02/pokemon-go-169.png" />
 			<div class="title">
 				<h3>Pokémon GO</h3>
 				<p>Catch Pokémon in the real world with AR technology!</p>
 			</div>
 		</div>
-		<div class="two">
+		<div class="two animate__animated  animate__backInRight"">
 			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-unite/2024/01252024/pokemon-unite-169.png" />
 			<div class="title">
 				<h3>Pokémon UNITE</h3>
 				<p>A new strategic team battle game!</p>
 			</div>
 		</div>
-		<div class="three">
+		<div class="three animate__animated  animate__backInRight">
 			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-go/2024/01262024/01/pokemon-go-169.png" />
 			<div class="title">
 				<h3>Pokémon GO</h3>
 				<p>Catch Pokémon in the real world with AR technology!</p>
 			</div>
 		</div>
-		<div class="four">
+		<div class="four animate__animated  animate__backInLeft">
 			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/strategy/go/mega-steelix/pokemon-go-169.png" />
 			<div class="title">
 				<h3>Pokémon GO</h3>
 				<p>Catch Pokémon in the real world with AR technology!</p>
 			</div>
 		</div>
-		<div class="five">
+		<div class="five animate__animated  animate__backInLeft">
 			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-sleep/2024/01252024/pokemon-sleep-169-en.png" />
 			<div class="title">
 				<h3>Pokémon Sleep</h3>
 				<p>A new app that tracks your sleep and features Pokémon!</p>
 			</div>
 		</div>
-		<div class="six">
-			<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/misc/_tiles/apps/mobile-apps-34.png" />
-			<div class="title">
-				<h3>Mobile Apps</h3>
-				<p>Discover our range of mobile apps!</p>
-			</div>
+
+			<div class="container">
+				<div class="six  animate__animated  animate__backInRight">
+					<img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/misc/_tiles/apps/mobile-apps-34.png" />
+					<div class="title">
+						<h3>Mobile Apps</h3>
+						<span>Discover our range of mobile apps!</span>
+					</div>
+				</div>
 		</div>
 	</div>
-</body>
-</html>
   
 </body>
 </html>
